	* test/test-twittering-mode.el: Add a test of reducing duplicates
	in a merge timeline spec.

	* twittering-mode.el: Remove duplicates in the list of primary
	base timeline specs.
	(twittering-get-primary-base-timeline-specs): remove duplicates in
	the list of primary base timeline specs.
	* test/test-twittering-mode.el: Add a test of dependence of
	composite timeline specs.

2012-02-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Delete a specified status from composite
	timeline buffers.
	(twittering-get-dependent-timeline-specs): new function.
	(twittering-delete-status-from-data-table): delete the given
	status from buffers bound to composite timelines.

	* twittering-mode.el: Decode a HTTP response body before invoking
	a sentinel.
	(twittering-decode-response-body): new function.
	(twittering-send-http-request): decode the response body by
	`twittering-decode-response-body' before invoking the sentinel.
	(twittering-http-get-default-sentinel): do not decode the response
	body here.

	* twittering-mode.el: Delete a status after the successful
	response for the `destroy-status' API is received.
	(twittering-http-post-destroy-status-sentinel): new function.
	(twittering-call-api): use the new function
	`twittering-http-post-destroy-status-sentinel' as the sentinel of
	`twittering-http-post' for the command `destroy-status'.
	(twittering-delete-status): do not delete the specified status
	here.

	* twittering-mode.el: `twittering-render-a-field' moves the
	cursor even if the given status is not rendered.
	(twittering-render-a-field): move the cursor even if the given
	status is not rendered.

	* twittering-mode.el: Do not use the return value of the function
	`twittering-render-a-field'.
	(twittering-render-timeline): do not use the return value of
	`twittering-render-a-field'.
	(twittering-show-replied-statuses): likewise.

	* twittering-mode.el: `twittering-render-a-field' returns nil if
	the status is not rendered.